@@ -1,3 +1,8 @@
+SimpleComplex/Utils 1.x, 2018-05-25
+-----------------------------------
+- Chainable freeze().
+- DateTimeSimple.
+
 SimpleComplex/Utils 1.x, 2018-05-23
 -----------------------------------
 - FreezableInterface.
